--- a/package.json
+++ b/package.json
@@ -16,15 +16,18 @@
     "axios": "^1.12.2",
     "expo": "~54.0.13",
     "expo-av": "~16.0.7",
+    "expo-dev-client": "~6.0.15",
     "expo-file-system": "~19.0.17",
     "expo-haptics": "~15.0.7",
     "expo-linear-gradient": "~15.0.7",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-native": "0.81.4",
     "react-native-reanimated": "^4.1.3",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-web": "^0.21.0",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
