--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
-    "scheme": "aairlabs", 
+    "scheme": "aairlabs",
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
@@ -24,9 +24,12 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "permissions": ["RECORD_AUDIO"],
+      "permissions": [
+        "RECORD_AUDIO"
+      ],
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "predictiveBackGestureEnabled": false,
+      "autoLaunch": false
     },
     "web": {
       "favicon": "./assets/favicon.png"
@@ -37,7 +40,8 @@
         {
           "microphonePermission": "Allow aairlabs-todo-voice-app to access your microphone for voice input."
         }
-      ]
+      ],
+      "expo-audio"
     ],
     "extra": {
       "eas": {
