--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native-stack": "^7.3.28",
     "axios": "^1.12.2",
     "expo": "~54.0.13",
+    "expo-audio": "~1.0.13",
     "expo-av": "~16.0.7",
     "expo-dev-client": "~6.0.15",
     "expo-file-system": "~19.0.17",
