--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,20 @@
 {
   "compilerOptions": {
-    "types": ["jest", "node"],
+    "types": [
+      "jest",
+      "node"
+    ],
     "jsx": "react-native",
+    "module": "ESNext",
     "allowJs": true,
     "esModuleInterop": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "strict": true,
+ 
   },
-  "include": ["src", "__tests__"]
+  "include": [
+    "src",
+    "__tests__"
+  ],
+  "extends": "expo/tsconfig.base"
 }
